Fixed merge of the hell!!

--- a/Cloudents.Web/ClientApp/components/helpers/header.less
+++ b/Cloudents.Web/ClientApp/components/helpers/header.less
@@ -110,7 +110,10 @@
         width: 100%;
     }
 
+  .search-b-wrapper {
+    flex-grow: 1;
 
+    max-width: 805px;
     .search-b {
         height: 40px;
         min-height: 40px;
@@ -139,6 +142,7 @@
             }
         }
     }
+  }
 
     .btn {
         .sbf-3-dot {
