--- a/Cloudents.Web/ClientApp/components/book/ResultBookDetail.less
+++ b/Cloudents.Web/ClientApp/components/book/ResultBookDetail.less
@@ -3,11 +3,17 @@
 .sec-result .book-detail {
     .d-cell {
         background: white;
+    }
 
-        @media(max-width: @screen-xs) {
-            border-radius: 4px;
-            margin-top: 16px;
-        }
+    .loader {
+        height: 200px;
+        position: static;
+        width: auto;
+    }
+
+    @media(max-width: @screen-xs) {
+        border-radius: 4px;
+        margin-top: 16px;
     }
 
     .mobile-filter {
