--- a/Cloudents.Web/ClientApp/components/book/ResultBookDetail.less
+++ b/Cloudents.Web/ClientApp/components/book/ResultBookDetail.less
@@ -3,12 +3,18 @@
 .sec-result .book-detail {
     .d-cell {
         background: white;
+    }
+
+    .loader {
+        height: 200px;
+        position: static;
+        width: auto;
+    }
 
         @media(max-width: @screen-xs) {
             border-radius: 4px;
             margin-top: 16px;
         }
-    }
 
     .mobile-filter {
         min-height: 0;
