started smart banner

--- a/Cloudents.Web/Views/Shared/_Layout.cshtml
+++ b/Cloudents.Web/Views/Shared/_Layout.cshtml
@@ -31,6 +31,20 @@
     @*<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">*@
 
 
+    <!-- Start SmartBanner configuration -->
+    <meta name="smartbanner:title" content="Smart Application">
+    <meta name="smartbanner:author" content="SmartBanner Contributors">
+    <meta name="smartbanner:price" content="FREE">
+    <meta name="smartbanner:price-suffix-apple" content=" - On the App Store">
+    <meta name="smartbanner:price-suffix-google" content=" - In Google Play">
+    <meta name="smartbanner:icon-apple" content="https://url/to/apple-store-icon.png">
+    <meta name="smartbanner:icon-google" content="https://url/to/google-play-icon.png">
+    <meta name="smartbanner:button" content="VIEW">
+    <meta name="smartbanner:button-url-apple" content="https://ios/application-url">
+    <meta name="smartbanner:button-url-google" content="https://android/application-url">
+    <meta name="smartbanner:enabled-platforms" content="android,ios">
+    <!-- End SmartBanner configuration -->
+
     <environment include="Development">
         <link rel="stylesheet" href="~/dist/@p.Css" />
     </environment>
