--- a/Cloudents.Web/ClientApp/components/helpers/header.less
+++ b/Cloudents.Web/ClientApp/components/helpers/header.less
@@ -48,6 +48,9 @@
 
     .toolbar__content > *:not(.btn):not(.menu):last-child,
     .toolbar__content > *:not(.btn):not(.menu):first-child {
+        &.dialog__container{
+            margin-right: 0;
+        }
         @media(max-width: 599px) {
             margin: 0;
         }
