--- a/Cloudents.Web/Views/Shared/_Layout.cshtml
+++ b/Cloudents.Web/Views/Shared/_Layout.cshtml
@@ -32,17 +32,18 @@
 
 
     <!-- Start SmartBanner configuration -->
-    <meta name="smartbanner:title" content="Smart Application">
-    <meta name="smartbanner:author" content="SmartBanner Contributors">
+    <meta name="smartbanner:title" content="Spitball: Simplify School">
+    <meta name="smartbanner:author" content="&#x200b">
     <meta name="smartbanner:price" content="FREE">
     <meta name="smartbanner:price-suffix-apple" content=" - On the App Store">
-    <meta name="smartbanner:price-suffix-google" content=" - In Google Play">
-    <meta name="smartbanner:icon-apple" content="https://url/to/apple-store-icon.png">
-    <meta name="smartbanner:icon-google" content="https://url/to/google-play-icon.png">
-    <meta name="smartbanner:button" content="VIEW">
-    <meta name="smartbanner:button-url-apple" content="https://ios/application-url">
-    <meta name="smartbanner:button-url-google" content="https://android/application-url">
+    <meta name="smartbanner:price-suffix-google" content=" - in google play">
+    <meta name="smartbanner:icon-apple" content="@cdnEndPoint/images/apps-logo.png">
+    <meta name="smartbanner:icon-google" content="@cdnEndPoint/images/apps-logo.png">
+    <meta name="smartbanner:button" content="View">
+    <meta name="smartbanner:button-url-apple" content="https://itunes.apple.com/us/app/spitball-simplify-school/id990911114?mt=8">
+    <meta name="smartbanner:button-url-google" content="https://play.google.com/store/apps/details?id=com.cloudents.spitball">
     <meta name="smartbanner:enabled-platforms" content="android,ios">
+    <meta name="smartbanner:disable-positioning" content="true">
     <!-- End SmartBanner configuration -->
 
     <environment include="Development">
