--- a/Cloudents.Web/Views/Shared/_Layout.cshtml
+++ b/Cloudents.Web/Views/Shared/_Layout.cshtml
@@ -97,7 +97,7 @@ h.end=i=function(){s.className=s.className.replace(RegExp(' ?'+y),'')};
 
     ga('create', 'UA-100723645-2', 'auto');
     ga('require', 'GTM-NN2LHCV');
-    ga('send', 'pageview');
+    //ga('send', 'pageview');
     </script>
 </head>
 <body>
