--- a/Cloudents.Web/ClientApp/components/results/Result.less
+++ b/Cloudents.Web/ClientApp/components/results/Result.less
@@ -78,6 +78,39 @@
     }
 }
 
+.empty-filter-cell{
+    background: white;
+    border-radius: 4px;
+    position: relative;
+    padding: 16px 24px 16px 16px;
+    text-align: right;
+
+    img{
+        width: 120px;
+        height: 96px;
+        margin-right: 16px;
+    }
+
+    p{
+        color: #3532D5;
+        text-align: left;
+        line-height: 1.13;
+        letter-spacing: -0.3px;
+        font-size: 16px;
+    }
+    button{
+        color: white;
+        background: #3532D5;
+        text-align: center;
+        width: 73px;
+        height: 24px;
+        letter-spacing: -0.3px;
+        border-radius: 4px;
+        font-size: 16px;
+    }
+}
+
+
 .loading-skeleton {
     .result-cell {
         pointer-events: none;
