case 9986 - still has some changes to do...

--- a/Cloudents.Web/ClientApp/components/food/Result.less
+++ b/Cloudents.Web/ClientApp/components/food/Result.less
@@ -78,6 +78,14 @@
     }
 }
 
+.empty-filter-cell{
+    background: white;
+    img{
+        width: 120px;
+        height: 96px;
+    }
+}
+
 /*#region item skeleton*/
 @skeletonWidth: 504px;
 @cardHeight: 184px;
