--- a/Cloudents.Web/wwwroot/Content/main.less
+++ b/Cloudents.Web/wwwroot/Content/main.less
@@ -112,6 +112,11 @@ button {
         border-color: @@color !important;
     }
 
+    .border-color-@{p} {
+        @color: "color-@{p}";
+        border-color: @@color !important;
+    }
+
     .color-@{p}--text {
         @color: "color-@{p}";
         color: @@color !important;
