--- a/Cloudents.Web/ClientApp/components/book/bookCell.less
+++ b/Cloudents.Web/ClientApp/components/book/bookCell.less
@@ -5,6 +5,9 @@
     width: 100%;
     background: #fff;
     border-radius: 4px;
+    @media(max-width: @screen-xs) {
+        min-height: 192px;
+    }
     /*.btn {
         > div {
             letter-spacing: -0.3px;
