--- a/Cloudents.Web/ClientApp/components/results/ResultItem.less
+++ b/Cloudents.Web/ClientApp/components/results/ResultItem.less
@@ -45,15 +45,14 @@
         color: #000;
         height: 72px;
         //margin-right: 40px;
-        line-height: 1.29;
+        //line-height: 1.29;
         letter-spacing: -0.3px;
         overflow: hidden;
-
-        @media(max-width: @screen-xs) {
-            .giveMeEllipsis(4,1.29);
-        }
+        .giveMeEllipsis(4,1.29);
     }
 }
+
+
 
 .bottom-wrap {
     flex-grow: 0;
