--- a/Cloudents.Web/ClientApp/components/results/ResultJob.less
+++ b/Cloudents.Web/ClientApp/components/results/ResultJob.less
@@ -39,6 +39,7 @@
 
     .properties {
         margin-top: 6px;
+        padding-bottom: 26px;
         //padding: 0 144px 0 0;
         .property {
             display: flex;
