--- a/Cloudents.Web/ClientApp/components/results/ResultTutor.less
+++ b/Cloudents.Web/ClientApp/components/results/ResultTutor.less
@@ -3,6 +3,7 @@
 .tutor-cell {
     .avatar {
         height: 120px !important; /*override inline style*/
+        box-shadow: 0px 0px 1px #4a4a4a;
     }
 
     .tutor-title {
