--- a/Cloudents.Web/ClientApp/components/app/app.less
+++ b/Cloudents.Web/ClientApp/components/app/app.less
@@ -26,7 +26,7 @@
   position: absolute;
 }
 
-.smartbanner {
+.js_smartbanner.smartbanner {
   &.smartbanner--android, &.smartbanner--ios {
     z-index: 4;
     background: #ffffff;
