--- a/Cloudents.Web/ClientApp/components/helpers/generalPage.less
+++ b/Cloudents.Web/ClientApp/components/helpers/generalPage.less
@@ -38,7 +38,7 @@
         }*/
 
         .show-btn {
-
+            pointer-events: none;
             position: absolute;
             bottom: 8px;
             right: 8px;
