--- a/Cloudents.Web/ClientApp/components/helpers/searchInput.less
+++ b/Cloudents.Web/ClientApp/components/helpers/searchInput.less
@@ -1,8 +1,12 @@
 ﻿@import "../../mixin.less";
 
-.highlight {
-  font-weight: bold;
-  color: #0ead91;
+
+.search-menu .type-AutoComplete .list__tile__title{
+  color: black;
+
+  .highlight {
+    color: #302eb5;
+  }
 }
 
 .search-b-wrapper {
