--- a/Cloudents.Web/ClientApp/components/landing-pages/landingTutor.less
+++ b/Cloudents.Web/ClientApp/components/landing-pages/landingTutor.less
@@ -5,7 +5,7 @@
   color: #ffffff;
   width: 100vw;
   height: 100vh;
-  background: url('./img/tutor-bg.png') no-repeat center;
+  background: url('./img/tutor-bg.jpg') no-repeat center;
   background-size: cover;
 
   .landing-page {
