fix book details loader view

--- a/Cloudents.Web/ClientApp/components/book/ResultBookDetail.less
+++ b/Cloudents.Web/ClientApp/components/book/ResultBookDetail.less
@@ -1,5 +1,9 @@
 ﻿@import "../../mixin.less";
-
+.book-header+.loading{
+    .loader{
+        display:flex;
+    }
+}
 .sec-result .book-detail {
     .d-cell {
         background: white;
