--- a/Cloudents.Web/ClientApp/components/landing-pages/style.less
+++ b/Cloudents.Web/ClientApp/components/landing-pages/style.less
@@ -1,13 +1,18 @@
 @import "../../mixin.less";
 
 .landing-page-wrapper {
-  .responsive-property(padding, 32px, 24px, 16px);
+  display: flex;
   color: #ffffff;
   width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  .responsive-property(padding, 32px, 24px, null);
+
+  @media(max-width: @screen-xs){
+    padding: 16px 16px 56px 16px;
+  }
 
   &.landing-study-docs, &.landing-jobs{
     h1{
@@ -19,8 +24,7 @@
 
   .landing-page {
     max-width: 1280px;
-    margin: 0 auto;
-    height: 100%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
