Started modifying searchInput to contain uni autosuggests

--- a/Cloudents.Web/ClientApp/components/landing-pages/style.less
+++ b/Cloudents.Web/ClientApp/components/landing-pages/style.less
@@ -23,8 +23,9 @@
   }
 
   .landing-page {
-    max-width: 1280px;
     width: 100%;
+    max-width: 1280px;
+    margin: 0 auto;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -107,6 +108,11 @@
 
     .search-b, button {
       border-radius: 4px;
+    }
+
+    .search-menu{
+      top: -16px;
+      transform: translate(0, -100%);
     }
   }
 }
