Done with autosuggest data - need to implement design and animations

--- a/Cloudents.Web/ClientApp/components/landing-pages/style.less
+++ b/Cloudents.Web/ClientApp/components/landing-pages/style.less
@@ -119,8 +119,11 @@
     }
 
     .search-menu{
-      top: -16px;
-      transform: translate(0, -100%);
+      z-index: 999;
+      @media(min-width: @screen-xs) {
+        top: -16px;
+        transform: translate(0, -100%);
+      }
     }
   }
 }
