--- a/Cloudents.Web/ClientApp/components/helpers/searchInput.less
+++ b/Cloudents.Web/ClientApp/components/helpers/searchInput.less
@@ -98,7 +98,7 @@
     .list__tile__action {
       min-width: 0;
       padding-right: 16px;
-      width: 40px;
+      min-width: 40px;
 
       i, svg {
         margin: 0 auto;
@@ -115,6 +115,16 @@
           width: 12px;
         }
       }
+    }
+  }
+}
+
+.uni-field .search-menu{
+  .list__tile {
+    height: 56px;
+    .suggestion-image {
+      width: 40px;
+      height: 40px;
     }
   }
 }
