--- a/Cloudents.Web/Views/Shared/Index.cshtml
+++ b/Cloudents.Web/Views/Shared/Index.cshtml
@@ -13,14 +13,14 @@
 }
 
 
-@*<div id="app" asp-prerender-module="ClientApp/renderOnServer">Loading....</div>*@
-<div id="app">Loading....</div>
+<div id="app" asp-prerender-module="ClientApp/renderOnServer">Loading....</div>
+@*<div id="app">Loading....</div>*@
 <div class="cdn-only2"></div>
 
 @section scripts {
-    <environment include="Development">
+    @*<environment include="Development">
         <script src="~/dist/@main.Js"></script>
-    </environment>
+    </environment>*@
     <environment exclude="Development">
         <script src="@Constants.GetCdnEndpoint(Environment)/dist/@main.Js"
                 asp-fallback-src="~/dist/@main.Js"
