Bug fixes in search input caused by landing pages

--- a/Cloudents.Web/ClientApp/components/landing-pages/style.less
+++ b/Cloudents.Web/ClientApp/components/landing-pages/style.less
@@ -135,6 +135,10 @@
         align-items: center;
         padding: 8px 24px;
 
+        i{
+          display: none;
+        }
+
         @media (max-width: @screen-xs) {
           padding: 8px 16px;
         }
