Added arrows navigation to searchInput case 10031

--- a/Cloudents.Web/ClientApp/components/helpers/searchInput.less
+++ b/Cloudents.Web/ClientApp/components/helpers/searchInput.less
@@ -7,6 +7,10 @@
   .highlight {
     color: #302eb5;
   }
+
+  .suggestion.focused .list__tile{
+    background: rgba(0,0,0,.12);
+  }
 }
 
 .search-b-wrapper {
